--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "chart.js": "^4.4.2",
+    "dotenv-extended": "^2.9.0",
     "nuxt": "^3.10.3",
     "vue": "^3.4.19",
     "vue-chartjs": "^5.3.0",
@@ -25,6 +26,7 @@
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@vue/test-utils": "^2.4.5",
     "cypress": "^13.7.2",
+    "dotenv": "^16.4.5",
     "happy-dom": "^13.8.4",
     "playwright-core": "^1.42.1"
   }
