--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.9.0",
     "chart.js": "^4.4.2",
     "dotenv-extended": "^2.9.0",
     "nuxt": "^3.10.3",
+    "pinia": "^2.1.7",
     "vue": "^3.4.19",
     "vue-chartjs": "^5.3.0",
     "vue-router": "^4.3.0",
